  UsageScenario.runScenario() now throws ScenarioException
  ConnectionPoolImpl bettered a bit
  ConnectionPoolStatistics.getLiveConnectionCount() renamed to getPoolSize()
  ConnectionPoolStatistics.getPoolStatistics() renamed to getFineGrainedStatistics()
  LoadTestModel, javadoc improvement
  common.* javadoc improvements
  EntityCriteriaUtil now respects the 100 max IN list items guaranteed by the JDBC standard
  Properties, EntityUtil docs added
  More javadocs added
  ValueMapImpl and ValueChangeMapImpl no longer implement Serializable
  EntityImpl and EntityImpl.KeyImpl implement writeObject and readObject (testing)
  EntityDefinitionImpl no longer implements Serializable
  EntityImpl.writeObject() and readObject() now use superclass methods to bypass validation, for the speed!
  ConnectionPoolImpl.RETRIES_BEFORE_NEW_CONNECTION added
  EntityImplTest.serialization() added
  Column moved from db to model
  RMI server now logs to {user.dir}/logs/jminor_server.log instead of {user.home}/logs/jminor.log
  LoadTestModel uses ExecutorService instead of Thread
  LoadTestModel changes rolled back, refactored a bit
  ConnectionPoolImpl improved some
  AbstractRemoteServer synchronized on connections
  Configuration now properties based, .config files added for server + monitor, Util.parseConfigurationFile() added and called by Configuration
  TextValueLink.getLink() renamed to getValueLink
  FormattedValueLink.FormattedValidator.updateValidityInfo() refactored
  DocumentAdapter.insertOrUpdate() renamed to insertOrRemoveUpdate()
  ValueLinkValidators added, fixed issue where formatted value link got both the normal validator as well as the formatted validator
  AbstractFilteredTableModel, refactored and simplified sorting
  EntityImpl.getValue() no longer returns the default value in case no value exists
  DoubleField refactored a bit
  Criteria implementations, implemented readObject/writeObject
  EntityKeyCriteria uses composition instead of inheritance